Modify access rules

--- a/project.config
+++ b/project.config
@@ -4,3 +4,4 @@
 	action = inherit
 [access "refs/*"]
 	owner = group ldap/oran-gerrit-ric-plt-resource-status-manager-committers
+	read = deny group GitHub Replication
