--- a/Swagger/RSM_API.yaml
+++ b/Swagger/RSM_API.yaml
@@ -27,7 +27,7 @@ servers:
       apiRoot:
         default: 'localhost:?'
 paths:
-  /health:
+  '/health':
     get:
       tags:
         - Health Check
@@ -35,8 +35,35 @@ paths:
       responses:
         '204':
           description: OK
+  '/general/resourcestatus':
+    put:
+      summary: enable/disable resource status
+      tags:
+        - Resource Status
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/ResourceStatus'
+        required: true
+      responses:
+        '204':
+          description: Success
+        '500':
+          description: Internal error
+          content:
+            application/problem+json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
 components:
   schemas:
+    ResourceStatus:
+      type: object
+      required:
+        - enableResourceStatus
+      properties:
+        enableResourceStatus:
+          type: boolean
     ErrorResponse:
       type: object
       required:
@@ -45,7 +72,7 @@ components:
       properties:
         errorCode:
           type: string
-          description: '401 - corrupted json, 402 - validation error, 403 - RAN in wrong state, 404 - resource not found, 500 - RNIB error, 501 - internal problem, 502 - RMR error'
+          description: '401 - corrupted json, 402 - validation error, 403 - RAN in wrong state, 404 - resource not found, 500 - RNIB error, 501 - internal problem, 502 - RMR error, 503 - RSM error'
         errorMessage:
           type: string
           description: Human readable text
