Adding new committers
Change-Id: I0fc826448a9516c65a41d945d58520154a02db5c
Signed-off-by: czichy <thoralf.czichy@nokia.com>

--- a/INFO.yaml
+++ b/INFO.yaml
@@ -39,10 +39,23 @@ committers:
       company: 'intl.att'
       id: 'ss412g'
       timezone: 'Unknown/Unknown'
+    - name: 'Yaki Ratz'
+      email: 'yaki.ratz@gmail.com'
+      company: 'gmail'
+      id: 'yakiratz'
+      timezone: 'Unknown/Unknown'
+    - name: 'Hila Anina'
+      email: 'hanina@intl.att.com'
+      company: 'intl.att'
+      id: 'hanina'
+      timezone: 'Unknown/Unknown'
 tsc:
     # yamllint disable rule:line-length
-    approval: 'missing'
+    approval: 'https://wiki.o-ran-sc.org/display/TOC/2019+Q4-Oct%2C+Nov%2C+Dec#id-2019Q4-Oct,Nov,Dec-20191023'
     changes:
-        - type: ''
-          name: ''
-          link: ''
+        - type: 'promotion'
+          name: 'Yaki Ratz'
+          link: 'https://wiki.o-ran-sc.org/display/TOC/2019+Q4-Oct%2C+Nov%2C+Dec#id-2019Q4-Oct,Nov,Dec-20191023'
+        - type: 'promotion'
+          name: 'Hila Anina'
+          link: 'https://wiki.o-ran-sc.org/display/TOC/2019+Q4-Oct%2C+Nov%2C+Dec#id-2019Q4-Oct,Nov,Dec-20191023'
