--- a/project.config
+++ b/project.config
@@ -4,4 +4,5 @@
 	action = inherit
 [access "refs/*"]
 	owner = group ldap/oran-gerrit-ric-plt-resource-status-manager-committers
+	owner = group saml/oran-gerrit-ric-plt-resource-status-manager-committers
 	read = group GitHub Replication
